# first-person-sus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
blend/: Eye.blend  Eye.blend1
engine/res/shader/: Light.glsl  Material.glsl  Mvp.glsl
engine/res/shader/include/: Light.glsl  Material.glsl
engine/res/shader/source/: Base.frag  Base.glsl  Base.vert
engine/res/shader/test/: Basic.glsl  CubeTest2.glsl
engine/src/core/: Application.cpp  Application.h  Assert.h  InputMap.cpp  InputMap.h  Log.h  Math.h  Rect.h  StringUtils.h  Typedef.h  Window.h
engine/src/example/: main.cpp
engine/src/renderer/: Camera.cpp  Camera.h  GlRenderer.cpp  GlRenderer.h  Renderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
engine/src/renderer/buffer/: Buffer.h  Index.cpp  Index.h  Vertex.cpp  Vertex.h
engine/src/renderer/model/: MeshData.h  Model.cpp  Model.h  ObjParser.cpp  ObjParser.h
engine/src/renderer/shader/: Parser.cpp  Parser.h  Parser2.cpp  Program.cpp  Program.h  Shader.h  Source.cpp  Source.h  Uniform.cpp  Uniform.h
engine/src/scene/: Scene.h
engine/src/scene/node/: Node.cpp  Node.h
engine/src/scene/test/: Cube.cpp  Cube.h  Cube2.cpp  Cube2.h  ModelTest.cpp  ModelTest.h  Test.cpp  Test.h
res/shader/: Basic.glsl  Basic.shader  CubeTest.glsl  CubeTest2.glsl  Mvp.glsl
res/shader/light/: AmbientLight.glsl  PointLight.glsl
res/shader/test/: CubeTest2.glsl
src/: Assert.h  GlRenderer.cpp  Renderer.h  Window.cpp  Window.h  main.cpp
src/Renderer/: GLRenderer.cpp  GLRenderer.h  Renderer.h  VertexBuffer.cpp  VertexBuffer.h
src/Renderer/Shader/: Parser.cpp  Parser.h  Program.cpp  Program.h  Source.h
src/application/: Application.cpp  Application.h
src/core/: Application.cpp  Application.h  Assert.h  Math.h  Typedef.h  Window.h
src/example/: main.cpp
src/renderer/: Camera.h  GlRenderer.cpp  GlRenderer.h  Mesh.h  Renderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/renderer/buffer/: Buffer.h  Index.cpp  Index.h  Vertex.cpp  Vertex.h
src/renderer/shader/: Parser.cpp  Parser.h  Program.cpp  Program.h  Shader.h  Source.cpp  Source.h  Uniform.cpp  Uniform.h
src/renderer/texture/: Texture.cpp  Texture.h
src/scene/: Scene.h
src/scene/node/: Node.cpp  Node.h
src/scene/test/: Cube.cpp  Cube.h  Cube2.cpp  Cube2.h  Test.cpp  Test.h
